feat: finishing touches for actual run for 2026 voting
* lots of improvements still possible tho
